# warpTemplate

./: LICENSE  README.md  __init__.py  corrections.py  loaders.py  models.py  pyproject.toml  setup.cfg  setup.py  sources.py  taxonomy.py  types.py
python/: class2warpset.ipynb  frankensteins_template.ipynb  peakfitting_gp.py  plot_btsfit_stats.ipynb  v2_0_define_warpclasses.ipynb  v2_III_colors.ipynb  v2_II_class2warpset.ipynb  v2_I_btssncosmo.ipynb  warp_supernova_select.ipynb  warp_template.ipynb  warp_template_test.ipynb  warpcoeff_color_fulltest.ipynb  warpcoeff_colorcorrect.ipynb  warpcoeff_colorcorrect_globaldist.ipynb  warpcoeff_distcolcorr.ipynb  warpcoeff_test_colorcorrect.ipynb  warpfit_ztfsn.ipynb  warptemplate.py  warptemplate_color_fits.csv  warptemplate_colors.ipynb  warptemplate_v2_color_fits.csv
