[metadata]
name = warpTemplate
version = 0.1.0
description = Warped SN time series templates and correction models for sncosmo.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
keywords = supernova, sncosmo, time series, templates, warp
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy>=1.23
    scipy>=1.9
    astropy>=5.1
    sncosmo>=2.0
    matplotlib>=3.7
zip_safe = false

[options.packages.find]
where = .
